--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   get: ^4.6.5
   flutter_local_notifications: ^14.1.0
   get_storage:
+  flutter_svg:
   flutter_launcher_icons: ^0.13.1
   search_map_location: ^0.0.6
   geolocator: ^9.0.2
@@ -59,6 +60,7 @@ dependencies:
   awesome_notifications: ^0.7.4+1
   firebase_storage: ^11.5.3
   firebase_messaging: ^14.6.6
+  iconsax:
   image_picker: ^0.8.4+4
   cloud_firestore: ^4.7.1
   toggle_switch: ^2.1.0
@@ -96,7 +98,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/
-
+    - assets/icon/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
