--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   random_string: ^2.3.1
   convex_bottom_bar: ^3.2.0
   rate: ^0.0.2
+  flutter_carousel_slider:
   google_fonts: ^4.0.4
   get: ^4.6.5
   flutter_local_notifications: ^14.1.0
@@ -99,7 +100,7 @@ flutter:
   assets:
     - assets/images/
     - assets/icon/
-
+    - assets/google_fonts/
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
