--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,6 +49,7 @@ dependencies:
   search_map_location: ^0.0.6
   geolocator: ^9.0.2
   url_launcher: ^6.2.3
+  intl: ^0.19.0
   geocoding:
   location: ^5.0.3
   flutter_firebase_recaptcha: ^1.0.2
